@@ -1,5 +1,15 @@
 2007-08-07  Jens Granseuer  <jensgr@gmx.net>
 
+	* appearance-desktop.c: (wp_add_images), (wp_dragged_image),
+	(desktop_init):
+	* appearance-main.c: (main):
+	* appearance-style.c: (update_color_buttons_from_settings),
+	(check_color_schemes_enabled), (update_cursor_size_scale),
+	(prepare_list), (style_init):
+	* appearance-ui.c: (ui_init): shave off a number of unnecessary casts
+
+2007-08-07  Jens Granseuer  <jensgr@gmx.net>
+
 	* appearance-style.c: (gtk_theme_changed): also remove code that we
 	needed when the thumbnailer was still in-process
 
